# DiffRouter_py

./: .gitignore  README.md  eval_circuits.py  main.py  requirements.txt  run_exp.py
cpp/: CMakeLists.txt  Makefile
cpp/include/: coord_to_int.h  device_reader.h  json_writer.h  net_list_writer.h  phys_netlist_reader.h  tile_rrg_builder.h
cpp/src/: coord_to_int.cpp  device_reader.cpp  extract_net_index_main.cpp  extract_rrg_main.cpp  json_writer.cpp  net_list_writer.cpp  phys_netlist_reader.cpp  tile_rrg_builder.cpp
potter/: 0001-diffrouter-gr-guidance.patch  setup_potter.sh
scripts/: ExtractRRG.py  PrebuildNetIndex.py  analyze_rrg_distances.py  build_and_test_compiled.py  congestion_diag.py  crossing_metric.py  eval_connectivity.py  exp_eps_warmstart.py  export_potter_guidance.py  extract_parallel.py  fast_guide_export.py  gpu_guide_export.py  measure_runtime_levers.py  profile_gpu_mem.py  profile_load.py  run_all_benchmarks.sh  run_eg_sweep.sh  sweep_grouped_conn.py  test_extract.py  total_wirelength.py  validate_cg_iters.py  validate_jacobi.py
src/: GlobalRoute.py  Timer.py  Visualizer.py  detailed_route.py  load_design.py
src/io/: __init__.py  write_design.py
src/router/: __init__.py  augmented_lagrangian.py  checkpoint.py  connectivity.py  connectivity_grouped.py  flow_conservation.py  global_router.py  gpu_guide.py  meng_lambda.py  net_index.py  route_extractor.py
src/rrg/: __init__.py  directed_rrg.py  rrg.py
tests/: conftest.py  test_augmented_lagrangian.py  test_connectivity.py  test_flow_conservation.py  test_global_router_load.py  test_meng_lambda.py  test_net_index.py  test_objective_grad.py  test_rrg_fast_load.py  test_toy_al.py  test_undirected_mode.py  test_weighted_wl.py  toy_router.py
